--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-# Dependencies
-.psci_modules
-bower_components
-node_modules
+/node_modules
 
-# Generated files
-.psci
-output
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
